# regelator

./: .env.example  CLAUDE.md  Cargo.toml  Claude.md  README.md  architecture.md  data_model_design.md  diesel.toml  pair_programming.md  project_plan.md  project_plan_core.md  project_plan_frontend.md  project_plan_interactive_frontend.md  project_plan_production_ready.md  project_plan_quiz_system.md  project_plan_setup.md  project_plan_ui_cleanup.md  technical_considerations.md
.claude/: settings.json
.claude/agents/: project-planner.md  rust-code-reviewer.md
.claude/commands/: commit.md
agents/: pair_programming.md  project_plan.md  project_plan_ai_features.md  project_plan_production_ready.md  project_plan_setup.md  project_plan_telegram_bot.md  technical_considerations.md  telegram_bot_cost_benefit_analysis.md  telegram_bot_future_map.md  telegram_bot_mvp_map.md  telegram_bot_now_map.md  telegram_bot_user_journey.md
config/: import.shared.toml  local.toml  shared.toml
docs/: architecture.md  data_model_design.md  schema.md
import_docs/: definitions.txt  quiz_questions.txt  rules.txt
migrations/2025-07-23-073512_create_core_rules_schema/: down.sql  up.sql
migrations/2025-07-24-154746_drop_title_column/: down.sql  up.sql
migrations/2025-07-24-220233_add_glossary_tables/: down.sql  up.sql
migrations/2025-07-24-221204_fix_primary_key_nullability/: down.sql  up.sql
migrations/2025-07-28-184011_create_quiz_tables/: down.sql  up.sql
migrations/2025-08-05-204036_create_admin_table/: down.sql  up.sql
migrations/2025-08-06-194709_add_quiz_question_status/: down.sql  up.sql
migrations/2025-08-10-152058_convert_quiz_timestamps/: down.sql  up.sql
src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  quiz_session.rs  repository.rs  schema.rs
src/analytics/: mod.rs  parquet_export.rs
src/charts/: admin.rs  mod.rs
src/extractors/: theme.rs
src/handlers/: admin.rs  mod.rs  quiz.rs  web.rs
src/middleware/: mod.rs  theme.rs
src/models/: admin.rs  core.rs  mod.rs  quiz.rs
src/templates/: admin_change_password.html  admin_dashboard.html  admin_login.html  base.html  (+14 more)
