[package]
name = "regelator"
version = "0.1.0"
edition = "2024"
default-run = "regelator"

[dependencies]
ammonia = "4.1.1"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "form", "query"] }
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
diesel = { version = "2.2.12", features = ["chrono", "r2d2", "sqlite"] }
dotenvy = "0.15.7"
color-eyre = "0.6.3"
jsonwebtoken = "9.3.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-tree = "0.4.0"
minijinja = { version = "2.11.0", features = ["loader"] }
pulldown-cmark = "0.13.0"
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.5"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "compression-gzip",
  "fs",
  "set-header",
] }
uuid = { version = "1.17.0", features = ["v7"] }
tracing-error = "0.2.1"
charming = { version = "0.6.0", features = ["ssr"] }
